Refactor CatalogApi for Java 11 compatibility; revert compiler release to 11 and replace Java 20+ features with Java 11 alternatives